backend/src/main/java/com/example/syncmeet/error/exception/UserEventMembershipException.java
package com.example.syncmeet.error.exception;

public class UserEventMembershipException extends RuntimeException{

    public UserEventMembershipException(String message) {super(message);}
}
